--- a/distancia_hidrica.Rmd
+++ b/distancia_hidrica.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Dist√¢ncia H√≠drica -  Menor caminho entre curvas e ilhas"
+title: "Dist‚ncia HÌdrica -  Menor caminho entre curvas e ilhas"
 author: "Leonardo Nunes"
 date: "1/25/2021"
 output: 
@@ -28,10 +28,10 @@ library(ggspatial)
 
 # Menor caminho {.tabset}
 
-Este documento foi criado para auxiliar quem precisa encontrar o menor caminho entre dois ou mais pontos dentro de um pol√≠gono, levando em considera√ß√£o os lim√≠tes da √°rea.
+Este documento foi criado para auxiliar quem precisa encontrar o menor caminho entre dois ou mais pontos dentro de um polÌgono, levando em consideraÁ„o os limÌtes da ·rea.
 
 
-Como exemplo, criei um pol√≠gono de rio, que cont√©m ilhas e curvas. O objetivo √© criar um caminho entre as ilhas e curvas que ligue dois pontos (como apresentado na **Figura 1**). Os pontos podem estar em um arquivo **.csv ** ou em um outro arquivo **.shp **. Neste caso preferi copiar as coordenadas para ter menos arquivos de entrada. selecionei um trecho de rio qualquer (n√£o fiz quest√£o de registrar o nome do rio para n√£o desviar a aten√ß√£o), criei um arquivo **.shp ** e desenhei o contorno do rio e depois criei os buracos das ilhas (as ilhas n√£o existiam no rio, eu inventei). Para cria√ß√£o do pol√≠gono utilizei o software QGIS.
+Como exemplo, criei um polÌgono de rio, que contÈm ilhas e curvas. O objetivo È criar um caminho entre as ilhas e curvas que ligue dois pontos (como apresentado na **Figura 1**). Os pontos podem estar em um arquivo **.csv ** ou em um outro arquivo **.shp **. Neste caso preferi copiar as coordenadas para ter menos arquivos de entrada. selecionei um trecho de rio qualquer (n„o fiz quest„o de registrar o nome do rio para n„o desviar a atenÁ„o), criei um arquivo **.shp ** e desenhei o contorno do rio e depois criei os buracos das ilhas (as ilhas n„o existiam no rio, eu inventei). Para criaÁ„o do polÌgono utilizei o software QGIS.
 
 <br />
 
@@ -39,47 +39,47 @@ Como exemplo, criei um pol√≠gono de rio, que cont√©m ilhas e curvas. O objetivo 
 # Carrega o poligono do rio no formato .shp
 rio <- shapefile("rio.shp")
 
-# Cria dois pontos que precisar√£o ser conectados
+# Cria dois pontos que precisar„o ser conectados
 origem <- c(-49.16760,-20.30495)
 destino <- c(-48.75058,-20.15693)
 
-# Cria o grid na √°rea do pol√≠gono
-grid <- makegrid(rio, cellsize = 0.0005) # Tamanho da c√©lula em unidades de mapa!
+# Cria o grid na ·rea do polÌgono
+grid <- makegrid(rio, cellsize = 0.0005) # Tamanho da cÈlula em unidades de mapa!
 
-# O grid √© um data.frame. para transformar em um  conjunto de dados espaciais utiliza-se a fun√ßao SpatialPoints
+# O grid È um data.frame. para transformar em um  conjunto de dados espaciais utiliza-se a funÁao SpatialPoints
 grid <- SpatialPoints(grid, proj4string = CRS(proj4string(rio)))
 
 # Extrair somente a parte do grid que intersepta o poligono do rio
 grid <- grid[rio, ]
 
-# Converte o grid novamente em um data.frame para cria√ß√£o do raster
+# Converte o grid novamente em um data.frame para criaÁ„o do raster
 grid_df <- as.data.frame(grid)
 
-# Atribui um valor para as c√©lulas que est√£o no rio (√°gua)
+# Atribui um valor para as cÈlulas que est„o no rio (·gua)
 grid_df$value <- 1
 
 # Cria o raser do data.frame
 rio_raster <- rasterFromXYZ(grid_df)
 
-# Transforma o raster em uma camada de transi√É¬ß√É¬£o
+# Transforma o raster em uma camada de transi√ß√£o
 rio_tr <- transition(rio_raster, mean, directions = 8)
 rio_tr <- geoCorrection(rio_tr, "c")
 
 
-# Fun√ß√£o que cria o menor caminho (pacote gdistance)
+# FunÁ„o que cria o menor caminho (pacote gdistance)
 caminho <- shortestPath(rio_tr, origem, destino, output = "SpatialLines")
 
-# Salva um arquivo tempor√°rio pra criar todos os arquivos de um shapefile
+# Salva um arquivo tempor·rio pra criar todos os arquivos de um shapefile
 shapefile(caminho, "Temp.shp", overwrite=TRUE)
 caminho <- shapefile("Temp.shp")
 
-# Armazena os limites da √°rea do rio para rosa dos ventos 
+# Armazena os limites da ·rea do rio para rosa dos ventos 
 xmin <- extent(rio)[1]
 xmax <- extent(rio)[2]
 ymin <- extent(rio)[3]
 ymax <- extent(rio)[4]
 
-# Cria o gr√°fico para visualizar o caminho criado
+# Cria o gr·fico para visualizar o caminho criado
 ggplot() +
   geom_polygon(data = rio, aes(x = long, y = lat, group = group, fill = group), show.legend = F, col = "black") +
   
@@ -100,9 +100,9 @@ ggplot() +
   coord_fixed() +
   labs(x = NULL, 
          y = NULL, 
-         title = "Menor dist√¢ncia entre dois pontos", 
+         title = "Menor dist‚ncia entre dois pontos", 
          subtitle = NULL, 
-         caption = paste0("Dist√¢ncia calculada: ", round(SpatialLinesLengths(caminho, longlat = T), 2), " km")) +
+         caption = paste0("Dist‚ncia calculada: ", round(SpatialLinesLengths(caminho, longlat = T), 2), " km")) +
   
     north(x.min = xmin, x.max = xmax, y.min = ymin, y.max = ymax, location = "bottomright", scale = 0.2, symbol = 3)  +
 
@@ -131,21 +131,21 @@ ggplot() +
   
 
 
-**Figura 1.** Pol√≠gono do rio e pontos de origem e de destino. O objetivo deste roteiro √© criar um caminho entre os dois pontos que considere as margens do pol√≠gono (linha roxa).
+**Figura 1.** PolÌgono do rio e pontos de origem e de destino. O objetivo deste roteiro È criar um caminho entre os dois pontos que considere as margens do polÌgono (linha roxa).
 
 <br />
 
-O documento est√° dividido em partes, que podem ser acessada nas abas da tabela de acordo com os √≠tens abaixo:
+O documento est· dividido em partes, que podem ser acessada nas abas da tabela de acordo com os Ìtens abaixo:
 
   1.1. Carregar os pacotes
   
-  1.2. Carregar o pol√≠gono do rio
+  1.2. Carregar o polÌgono do rio
   
-  1.3. Cria√ß√£o do grid e da camada raster
+  1.3. CriaÁ„o do grid e da camada raster
   
-  1.4. Cria√ß√£o da camada de transi√ß√£o e do menor caminho
+  1.4. CriaÁ„o da camada de transiÁ„o e do menor caminho
   
-  1.5. Fun√ß√£o que calcula o tamanho do seguimento (dist√£ncia entre os dois pontos)
+  1.5. FunÁ„o que calcula o tamanho do seguimento (dist„ncia entre os dois pontos)
 
 
 <br />
@@ -161,7 +161,7 @@ library(dplyr)
 ```
 
 <br />
-Pacotes para criar a vizsualiza√ß√£o do mapa:
+Pacotes para criar a vizsualizaÁ„o do mapa:
 ```{r pacotes, message=F, warning=F, results='hide', eval=F}
 library(ggplot2)
 library(ggthemes)
@@ -176,13 +176,13 @@ library(ggspatial)
 
 ## Carregar os dados
 
-O primeiro passo √© carregar o pol√≠gono do rio, para isso, utilisei a fun√ß√£o "shapefile" do pacote "raster". Depois armazenei os pontos de origem e de destino em duas vari√°veis. Preferi copiar as coordenadas para ter um arquivo de entrada a menos. Mas essas coordenadas poderiam estar em um arquivo ou em outra camada. 
+O primeiro passo È carregar o polÌgono do rio, para isso, utilisei a funÁ„o "shapefile" do pacote "raster". Depois armazenei os pontos de origem e de destino em duas vari·veis. Preferi copiar as coordenadas para ter um arquivo de entrada a menos. Mas essas coordenadas poderiam estar em um arquivo ou em outra camada. 
 
 ```{r plot_poligono}
 # Carrega o poligono do rio no formato .shp
 rio <- shapefile("rio.shp")
 
-# Cria dois pontos que precisar√£o ser conectados
+# Cria dois pontos que precisar„o ser conectados
 origem <- c(-49.16760,-20.30495)
 destino <- c(-48.75058,-20.15693)
 
@@ -195,23 +195,23 @@ destino <- c(-48.75058,-20.15693)
 
 ## Grid e raster
 
-Em seguida √© necess√°rio criar uma camada no formato raster que ser√° utilizada para criar a camada de transi√ß√£o. Para isso ser√° necess√°rio escolher o tamanho das c√©lulas do grid. Lembrando que o tamanho √© muito particular, dependende do n√≠vel de detalhes necess√°rio para que toda a √°rea contenha c√©lulas. 
+Em seguida È necess·rio criar uma camada no formato raster que ser· utilizada para criar a camada de transiÁ„o. Para isso ser· necess·rio escolher o tamanho das cÈlulas do grid. Lembrando que o tamanho È muito particular, dependende do nÌvel de detalhes necess·rio para que toda a ·rea contenha cÈlulas. 
 
 
 ```{r cria_grid_novamente}
-# Cria o grid na √°rea do pol√≠gono
-grid <- makegrid(rio, cellsize = 0.0005) # Tamanho da c√©lula em unidades de mapa!
+# Cria o grid na ·rea do polÌgono
+grid <- makegrid(rio, cellsize = 0.0005) # Tamanho da cÈlula em unidades de mapa!
 
-# O grid √© um data.frame. para transformar em um  conjunto de dados espaciais utiliza-se a fun√ßao SpatialPoints
+# O grid È um data.frame. para transformar em um  conjunto de dados espaciais utiliza-se a funÁao SpatialPoints
 grid <- SpatialPoints(grid, proj4string = CRS(proj4string(rio)))
 
 # Extrair somente a parte do grid que intersepta o poligono do rio
 grid <- grid[rio, ]
 
-# Converte o grid novamente em um data.frame para cria√ß√£o do raster
+# Converte o grid novamente em um data.frame para criaÁ„o do raster
 grid_df <- as.data.frame(grid)
 
-# Atribui um valor para as c√©lulas que est√£o no rio (√°gua)
+# Atribui um valor para as cÈlulas que est„o no rio (·gua)
 grid_df$value <- 1
 
 # Cria o raser do data.frame
@@ -228,41 +228,41 @@ points(x = -48.70708, y = -22.17826, col = "red", cex = 4)
 <br />
 <br />
 
-## Camada de transi√ß√£o
+## Camada de transiÁ„o
 
-Para criar o caminho em um raster √© necess√°rio que seja criado uma camada de transi√ß√£o. Para isso, utilizei a fun√ß√£o "transition", do pacote "gdistance". Para quem j√° possui um raster da √°rea desejada, ou preferiu criar o raster com outro software, basta carregar o raster a partir desta etapa. 
+Para criar o caminho em um raster È necess·rio que seja criado uma camada de transiÁ„o. Para isso, utilizei a funÁ„o "transition", do pacote "gdistance". Para quem j· possui um raster da ·rea desejada, ou preferiu criar o raster com outro software, basta carregar o raster a partir desta etapa. 
 
 
 ```{r transicao}
-# Transforma o raster em uma camada de transi√É¬ß√É¬£o
+# Transforma o raster em uma camada de transi√ß√£o
 rio_tr <- transition(rio_raster, mean, directions = 8)
 rio_tr <- geoCorrection(rio_tr, "c")
 
 ```
 
-O menor caminho √© criado com a fun√ß√£o 'shortestPath' tamb√©m do pacote 'ggdistance'. Ap√≥s a cria√ß√£o do caminho, para que a camada seja utilziada no gr√°fico √© necess√°rio salver o arquivo para criar os 4 arquivos que comp√µes um shapefile.
+O menor caminho È criado com a funÁ„o 'shortestPath' tambÈm do pacote 'ggdistance'. ApÛs a criaÁ„o do caminho, para que a camada seja utilziada no gr·fico È necess·rio salver o arquivo para criar os 4 arquivos que compıes um shapefile.
 
 ```{r pontos}
-# Fun√ß√£o que cria o menor caminho (pacote gdistance)
+# FunÁ„o que cria o menor caminho (pacote gdistance)
 caminho <- shortestPath(rio_tr, origem, destino, output = "SpatialLines")
 
-# Salva um arquivo tempor√°rio pra criar todos os arquivos de um shapefile
+# Salva um arquivo tempor·rio pra criar todos os arquivos de um shapefile
 shapefile(caminho, "Temp.shp", overwrite=TRUE)
 caminho <- shapefile("Temp.shp")
 ```
 
 <br />
 
-A seguir a instru√ßao de como foi feito o plot que √© apresentado na introdu√ß√£o.
+A seguir a instruÁao de como foi feito o plot que È apresentado na introduÁ„o.
 
 ```{r plot_caminho_intro}
-# Armazena os limites da √°rea do rio para rosa dos ventos 
+# Armazena os limites da ·rea do rio para rosa dos ventos 
 xmin <- extent(rio)[1]
 xmax <- extent(rio)[2]
 ymin <- extent(rio)[3]
 ymax <- extent(rio)[4]
 
-# Cria o gr√°fico para visualizar o caminho criado
+# Cria o gr·fico para visualizar o caminho criado
 ggplot() +
   geom_polygon(data = rio, aes(x = long, y = lat, group = group, fill = group), show.legend = F, col = "black") +
   
@@ -283,9 +283,9 @@ ggplot() +
   coord_fixed() +
   labs(x = NULL, 
          y = NULL, 
-         title = "Menor dist√¢ncia entre dois pontos", 
+         title = "Menor dist‚ncia entre dois pontos", 
          subtitle = NULL, 
-         caption = paste0("Dist√¢ncia calculada: ", round(SpatialLinesLengths(caminho, longlat = T), 2), " km")) +
+         caption = paste0("Dist‚ncia calculada: ", round(SpatialLinesLengths(caminho, longlat = T), 2), " km")) +
   
     north(x.min = xmin, x.max = xmax, y.min = ymin, y.max = ymax, location = "bottomright", scale = 0.2, symbol = 3)  +
 
@@ -316,8 +316,8 @@ ggplot() +
 <br />
 <br />
 
-## Dist√¢ncia hidrica
-Para calcular a dist√¢ncia h√≠drica utilizei a fu√ß√£o "SpatialLinesLengths" do pacote "sp". Importante notar que foi utilizado o argumento "latlong = T", para retornar a dist√¢ncia em km.
+## Dist‚ncia hidrica
+Para calcular a dist‚ncia hÌdrica utilizei a fuÁ„o "SpatialLinesLengths" do pacote "sp". Importante notar que foi utilizado o argumento "latlong = T", para retornar a dist‚ncia em km.
 
 
 ```{r distancia}
